--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.11.0",
+    "@tabler/icons-react": "^3.34.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.3",
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "prisma": "^6.11.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
