--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 services:
   db:
     image: postgres:15
-    container_name: my_postgres
+    container_name: postgres
     restart: always
     environment:
       POSTGRES_USER: admin
